fix toast out of screen on mobile

--- a/frontend/src/assets/css/tailwind.css
+++ b/frontend/src/assets/css/tailwind.css
@@ -6,3 +6,8 @@
     @apply text-indigo-500 hover:text-indigo-600 transition-colors;
   }
 }
+
+/* fixes toast out of screen on mobile */
+.p-toast {
+  @apply w-[calc(100vw-80px)] sm:w-[calc(100vw-90px)] md:w-[25rem];
+}
